chore: cleanups again